# Design_Patterns_Homework

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  settings1.json  swagger.yaml
TestReportGeneration_folder/csv/: measurement_unit_report.csv  nomenclature_group_report.csv  nomenclature_report.csv  recipe_report.csv
TestReportGeneration_folder/json/: measurement_unit_report.json  nomenclature_group_report.json  nomenclature_report.json  recipe_report.json
TestReportGeneration_folder/markdown/: measurement_unit_report.md  nomenclature_group_report.md  nomenclature_report.md  recipe_report.md
TestReportGeneration_folder/rtf/: measurement_unit_report.rtf  nomenclature_group_report.rtf  nomenclature_report.rtf  recipe_report.rtf
TestReportGeneration_folder/xml/: measurement_unit_report.xml  (+3 more)
api/: nomeclature_api.py
files/: settings.json  trial_balance_report.json
general/: base_models.py  common.py  data_reposity.py  domain_prototype.py  logger.py  start_service.py
scripts/: change_scripts_for_8000.sh  request_scripts_for_8001.sh
settings/: settings_manager.py
settings_worker/: settings.py  settings_manager.py
test_files/: performance_results.md
tests/: test_create_reports.py  test_filter.py  test_measurement_unit.py  test_nomeclature.py  test_nomenclature_group.py  test_organization.py  test_recipe.py  test_report_factory.py  test_settings_manager.py  test_start_service.py  test_trial_balance.py  test_warehouse.py  test_warehouse_transaction.py  test_warehouse_turnover.py  test_warehouse_turnover_block_period.py
(+67 files in other folders)
