[tool.poetry]
name = "design-patterns-homework"
version = "0.1.0"
description = ""
authors = ["Yuri-ga1 <regota09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
